@@ -3,12 +3,17 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.ajoberstar.git-publish' version '3.0.0'
-    id 'com.palantir.git-version' version '0.12.2'
+    id 'com.palantir.git-version' version '0.12.3'
+    id 'org.javamodularity.moduleplugin' version '1.7.0'
     id 'jacoco'
 }
 
 group 'ckn'
 version '1.0-SNAPSHOT'
+
+java {
+    modularity.inferModulePath = true
+}
 
 repositories {
     mavenCentral()
@@ -27,7 +32,7 @@ gitPublish {
     // branch will be created if it doesn't exist
     branch = 'gh-pages'
     // generally, you don't need to touch this
-    repoDir = file("$buildDir/gitPublish")
+    repoDir = file("$buildDir/gitPublish") as Directory
 
     // what to publish, this is a standard CopySpec
     contents {
@@ -68,7 +73,7 @@ jacocoTestReport {
 build.dependsOn jacocoTestReport
 application {
     mainModule = 'ckn.yakitori'
-    mainClass = 'ckn.yakitori.main'
+    mainClass = 'ckn.yakitori.client.client'
 }
 tasks.withType(AbstractCompile)*.options*.encoding = tasks.withType(GroovyCompile)*.groovyOptions*.encoding = 'UTF-8'
 javafx {
@@ -86,14 +91,27 @@ dependencies {
         exclude(group: 'org.openjfx')
     }
     implementation('net.synedra:validatorfx:0.1.13') { exclude(group: 'org.openjfx') }
-    implementation 'org.jetbrains:annotations:20.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    implementation 'org.jetbrains:annotations:22.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
+    implementation "org.testfx:testfx-core:4.0.16-alpha"
+    implementation "org.testfx:testfx-junit5:4.0.16-alpha"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
+
+
     useJUnitPlatform()
+    doFirst {
+        jvmArgs += [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH', // to resolve all modules in the module path to be accessed by gradle test runner
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx',
+        ]
+        classpath = files()
+    }
     systemProperties System.getProperties()
     finalizedBy(jacocoTestReport)
 }
